--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -12,3 +12,20 @@ h1 {
     font-weight: 200;
     color: #0ccac4;
 }
+
+h2 {
+    font-family: 'Segoe UI Emoji';
+    font-weight: 200;
+    color: #0ccac4;
+}
+
+p {
+    font-family: 'Segoe UI Emoji';
+    font-weight: 200;
+}
+
+.f4{
+    font-family: 'SEGA LOGO FONT';
+    font-weight: 100;
+    color: #0ccac4;
+}
